# case0003_temp

./: .gitignore  AGENT.md  main.py  manage.py  proposal-deep-research-report.md  proposal.md  pyproject.toml
apps/appointment_snapshot/: apps.py
apps/audit_operations/: apps.py  models.py
apps/backoffice/: apps.py
apps/common/: hashing.py  masking.py
apps/customer_import/: apps.py
apps/external_integration/: adapters.py  apps.py  errors.py  logging.py  models.py  ports.py
apps/identity_binding/: apps.py
apps/notification_reminder/: apps.py
apps/otp_verification/: apps.py
config/: settings.py  urls.py
doc/: prompt.md
doc/tasks/: appointment_snapshot.md  audit_operations.md  backoffice.md  booking.md  customer_import.md  external_integration.md  identity_binding.md  notification_reminder.md  otp_verification.md  progress.md  scheduling.md
docs/: detail-design.md  high-level-design.md  我與學長的對話.txt
tests/: test_django_bootstrap.py
yuekang-openapi-docs/: README.md
yuekang-openapi-docs/00_source_docs/: default.md  default_OpenAPI.json
yuekang-openapi-docs/01_openapi_swagger/: openapi-default.json  openapi-default.yaml
yuekang-openapi-docs/02_api_reports/: api-report.md  summary.md
yuekang-openapi-docs/03_endpoint_indexes/: endpoints-default.csv  subscription-events-default.csv
yuekang-openapi-docs/04_project_preparation/: README.md  api-capability-map.csv  api-capability-map.md  integration-questions.md  poc-plan.md  pre-project-assessment.md
yuekang-openapi-docs/05_gemini_validation/: api-report.md  endpoints.csv  subscription-events.csv  (+1 more)
(+15 files in other folders)
