[project]
name = "case0003-temp"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "django>=6.0.5",
]

[dependency-groups]
dev = [
    "mypy>=2.1.0",
    "pytest>=9.0.3",
    "pytest-django>=4.12.0",
    "ruff>=0.15.14",
]

[tool.pytest.ini_options]
DJANGO_SETTINGS_MODULE = "config.settings"
pythonpath = ["."]
python_files = ["test_*.py", "*_test.py"]
testpaths = ["apps", "tests"]

[tool.ruff]
line-length = 100
target-version = "py313"
exclude = [
    "yuekang-openapi-docs",
]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
ignore = ["B008"]

[tool.mypy]
python_version = "3.13"
ignore_missing_imports = true
warn_unused_ignores = true
exclude = [
    "yuekang-openapi-docs",
]
